--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,49 @@
     transform: rotate(360deg);
   }
 }
+
+.panel {
+  border: 1px solid #D5006C;
+  border-radius:0;
+  transition: box-shadow 0.5s;
+}
+
+.panel:hover {
+  box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+}
+
+.panel-footer .btn:hover {
+  border: 1px solid #00C4B3;
+  background-color: #fff !important;
+  color: #00C4B3;
+}
+
+.panel-heading {
+  color: #fff !important;
+  background-color: #D5006C !important;
+  padding: 25px;
+  border-bottom: 1px solid transparent;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.panel-footer {
+  background-color: #fff !important;
+}
+
+.panel-footer h3 {
+  font-size: 32px;
+}
+
+.panel-footer h4 {
+  color: #aaa;
+  font-size: 14px;
+}
+
+.panel-footer .btn {
+  margin: 15px 0;
+  background-color: #D5006C;
+  color: #fff;
+}
